--- a/train.ipynb
+++ b/train.ipynb
@@ -2,35 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mRunning cells with '.venv (Python 3.11.9)' requires the ipykernel package.\n",
-      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: '/home/vilarmms/Projetos/SmartVine/.venv/bin/python -m pip install ipykernel -U --force-reinstall'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Importing libs\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import opencv, json, os\n",
-    "from src.data_loader.py import DataLoader\n",
-    "from src.model_architecture import ModelArchitecture as ModelArch\n",
+    "import cv2, json, os\n",
+    "from src.data_loader import DataLoader\n",
+    "# from src.model_architecture import ModelArchitecture as ModelArch\n",
+    "\n",
     "# Importing model configuration\n",
     "with open('model_config.json') as f:\n",
     "    config = json.load(f)\n",
     "\n",
-    "# Load data (grayscale)\n",
-    "load_inst = DataLoader()\n",
+    "# Load data (default: grayscale)\n",
+    "load_inst = DataLoader(config['img_channels'])\n",
     "\n",
-    "if config[\"load_data_from\"] == \"raw\":\n",
+    "if config[\"process_images\"] == \"True\":\n",
     "    df_train, df_test = load_inst.load_train_and_test_raw_datasets(config[\"save_datasets\"])\n",
     "\n",
     "else:\n",
@@ -46,7 +36,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.9"
   }
  },
